@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2024 Gargoyle Software Inc.
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@ package org.htmlunit.util;
 import static java.nio.charset.StandardCharsets.US_ASCII;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
-import java.io.UnsupportedEncodingException;
+import java.io.ByteArrayOutputStream;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -29,8 +29,6 @@ import java.util.BitSet;
 import java.util.Locale;
 import java.util.Objects;
 
-import org.apache.commons.codec.DecoderException;
-import org.apache.commons.codec.net.URLCodec;
 import org.htmlunit.WebAssert;
 import org.htmlunit.protocol.AnyHandler;
 import org.htmlunit.protocol.javascript.JavaScriptURLConnection;
@@ -232,12 +230,12 @@ public final class UrlUtils {
     public static URL toUrlUnsafe(final String url) throws MalformedURLException {
         WebAssert.notNull("url", url);
 
-        final String protocol = org.apache.commons.lang3.StringUtils.substringBefore(url, ":").toLowerCase(Locale.ROOT);
+        final String protocol = StringUtils.substringBefore(url, ":").toLowerCase(Locale.ROOT);
 
         if (protocol.isEmpty() || UrlUtils.isNormalUrlProtocol(protocol)) {
             final URL response = new URL(url);
             if (response.getProtocol().startsWith("http")
-                    && org.apache.commons.lang3.StringUtils.isEmpty(response.getHost())) {
+                    && StringUtils.isEmptyOrNull(response.getHost())) {
                 throw new MalformedURLException("Missing host name in url: " + url);
             }
             return response;
@@ -248,7 +246,7 @@ public final class UrlUtils {
         }
 
         if (ABOUT.equals(protocol)) {
-            if (org.apache.commons.lang3.StringUtils.equalsIgnoreCase(ABOUT_BLANK, url)) {
+            if (ABOUT_BLANK.equalsIgnoreCase(url)) {
                 return URL_ABOUT_BLANK;
             }
             return new URL(null, url, ABOUT_HANDLER);
@@ -347,10 +345,10 @@ public final class UrlUtils {
     public static String decode(final String escaped) {
         try {
             final byte[] bytes = escaped.getBytes(US_ASCII);
-            final byte[] bytes2 = URLCodec.decodeUrl(bytes);
+            final byte[] bytes2 = decodeUrl(bytes);
             return new String(bytes2, UTF_8);
         }
-        catch (final DecoderException e) {
+        catch (final IllegalArgumentException e) {
             // Should never happen.
             throw new RuntimeException(e);
         }
@@ -366,7 +364,7 @@ public final class UrlUtils {
      */
     private static String encode(final String unescaped, final BitSet allowed, final Charset charset) {
         final byte[] bytes = unescaped.getBytes(charset);
-        final byte[] bytes2 = URLCodec.encodeUrl(allowed, bytes);
+        final byte[] bytes2 = encodeUrl(allowed, bytes);
         return encodePercentSign(bytes2);
     }
 
@@ -375,7 +373,7 @@ public final class UrlUtils {
      * string that is not followed by two hexadecimal characters.
      * @param input the input bytes
      * @return the given input string where every occurrence of <code>%</code> in
-     * invalid escape sequences has been replace by <code>%25</code>
+     *         invalid escape sequences has been replace by <code>%25</code>
      */
     private static String encodePercentSign(final byte[] input) {
         if (input == null) {
@@ -537,7 +535,7 @@ public final class UrlUtils {
     public static URL getUrlWithNewUserName(final URL u, final String newUserName) throws MalformedURLException {
         String newUserInfo = newUserName == null ? "" : newUserName;
         final String userInfo = u.getUserInfo();
-        if (org.apache.commons.lang3.StringUtils.isNotBlank(userInfo)) {
+        if (StringUtils.isNotBlank(userInfo)) {
             final int colonIdx = userInfo.indexOf(':');
             if (colonIdx > -1) {
                 newUserInfo = newUserInfo + userInfo.substring(colonIdx);
@@ -558,7 +556,7 @@ public final class UrlUtils {
             throws MalformedURLException {
         String newUserInfo = newUserPassword == null ? "" : ':' + newUserPassword;
         final String userInfo = u.getUserInfo();
-        if (org.apache.commons.lang3.StringUtils.isNotBlank(userInfo)) {
+        if (StringUtils.isNotBlank(userInfo)) {
             final int colonIdx = userInfo.indexOf(':');
             if (colonIdx > -1) {
                 newUserInfo = userInfo.substring(0, colonIdx) + newUserInfo;
@@ -953,9 +951,8 @@ public final class UrlUtils {
 
     /**
      * Returns true if specified string is a special scheme.
-     * <p>
-     * https://url.spec.whatwg.org/#special-scheme
-     * <p>
+     * see <a href='https://url.spec.whatwg.org/#special-scheme'>
+     * https://url.spec.whatwg.org/#special-scheme</a>
      *
      * @param scheme the scheme string to check
      * @return true if special
@@ -1358,12 +1355,7 @@ public final class UrlUtils {
             return "";
         }
 
-        try {
-            return URLEncoder.encode(part, "UTF-8");
-        }
-        catch (final UnsupportedEncodingException e) {
-            return part;
-        }
+        return URLEncoder.encode(part, UTF_8);
     }
 
     /**
@@ -1380,4 +1372,154 @@ public final class UrlUtils {
         return url;
     }
 
+    /**
+     * Decodes an array of URL safe 7-bit characters into an array of original bytes.
+     * Escaped characters are converted back to their original representation.
+     * @param bytes array of URL safe characters
+     * @param removeWhitespace if true don't add whitespace chars to the output
+     * @return array of original bytes
+     * @throws IllegalArgumentException in case of error
+     */
+    public static byte[] decodeDataUrl(final byte[] bytes, final boolean removeWhitespace)
+                            throws IllegalArgumentException  {
+        // adapted from apache commons codec
+        if (bytes == null) {
+            return null;
+        }
+        final ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+        for (int i = 0; i < bytes.length; i++) {
+            int b = bytes[i];
+            if (b == '%') {
+                try {
+                    final int u = digit16(bytes[++i]);
+                    final int l = digit16(bytes[++i]);
+                    b = (u << 4) + l;
+                }
+                catch (final ArrayIndexOutOfBoundsException e) {
+                    throw new IllegalArgumentException("Invalid URL encoding: ", e);
+                }
+            }
+            if (removeWhitespace
+                    && (b == 9 || b == 10 || b == 12 || b == 13 || b == 32)) {
+                continue;
+            }
+
+            buffer.write(b);
+        }
+        return buffer.toByteArray();
+    }
+
+    /**
+     * Decodes an array of URL safe 7-bit characters into an array of original bytes.
+     * Escaped characters are converted back to their original representation.
+     * @param bytes array of URL safe characters
+     * @return array of original bytes
+     * @throws IllegalArgumentException in case of error
+     */
+    public static byte[] decodeUrl(final byte[] bytes) throws IllegalArgumentException {
+        // adapted from apache commons codec
+        if (bytes == null) {
+            return null;
+        }
+        final ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+        for (int i = 0; i < bytes.length; i++) {
+            final int b = bytes[i];
+            if (b == '+') {
+                buffer.write(' ');
+            }
+            else if (b == '%') {
+                try {
+                    final int u = digit16(bytes[++i]);
+                    final int l = digit16(bytes[++i]);
+                    buffer.write((char) ((u << 4) + l));
+                }
+                catch (final ArrayIndexOutOfBoundsException e) {
+                    throw new IllegalArgumentException("Invalid URL encoding: ", e);
+                }
+            }
+            else {
+                buffer.write(b);
+            }
+        }
+        return buffer.toByteArray();
+    }
+
+    private static int digit16(final byte b) throws IllegalArgumentException  {
+        final int i = Character.digit((char) b, 16);
+        if (i == -1) {
+            throw new IllegalArgumentException("Invalid URL encoding: not a valid digit (radix 16): " + b);
+        }
+        return i;
+    }
+
+    /**
+     * Encodes an array of bytes into an array of URL safe 7-bit characters. Unsafe characters are escaped.
+     * @param urlsafe bitset of characters deemed URL safe
+     * @param bytes  array of bytes to convert to URL safe characters
+     * @return array of bytes containing URL safe characters
+     */
+    public static byte[] encodeUrl(final BitSet urlsafe, final byte[] bytes) {
+        // adapted from apache commons codec
+        if (bytes == null) {
+            return null;
+        }
+
+        final ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+        for (final byte c : bytes) {
+            int b = c;
+            if (b < 0) {
+                b = 256 + b;
+            }
+            if (urlsafe.get(b)) {
+                if (b == ' ') {
+                    b = '+';
+                }
+                buffer.write(b);
+            }
+            else {
+                buffer.write('%');
+                final char hex1 = hexDigit(b >> 4);
+                final char hex2 = hexDigit(b);
+                buffer.write(hex1);
+                buffer.write(hex2);
+            }
+        }
+        return buffer.toByteArray();
+    }
+
+    private static char hexDigit(final int b) {
+        return Character.toUpperCase(Character.forDigit(b & 0xF, 16));
+    }
+
+    /**
+     * Determines whether two URLs share the same origin according to the Same-Origin Policy.
+     * Two URLs are considered to have the same origin if they have the same protocol (scheme),
+     * host, and port.
+     *
+     * <p>The method handles default ports correctly by using the URL's default port when
+     * the explicit port is -1 (indicating no port was specified).
+     *
+     * @param originUrl the first URL to compare (must not be null)
+     * @param newUrl the second URL to compare (must not be null)
+     * @return {@code true} if both URLs have the same host and effective port; {@code false} otherwise
+     */
+    public static boolean isSameOrigin(final URL originUrl, final URL newUrl) {
+        if (!originUrl.getProtocol().equals(newUrl.getProtocol())) {
+            return false;
+        }
+
+        if (!originUrl.getHost().equalsIgnoreCase(newUrl.getHost())) {
+            return false;
+        }
+
+        int originPort = originUrl.getPort();
+        if (originPort == -1) {
+            originPort = originUrl.getDefaultPort();
+        }
+        int newPort = newUrl.getPort();
+        if (newPort == -1) {
+            newPort = newUrl.getDefaultPort();
+        }
+        return originPort == newPort;
+    }
 }
