@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2024 Gargoyle Software Inc.
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,22 +14,21 @@
  */
 package org.htmlunit;
 
-import static org.junit.Assert.fail;
-
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Arrays;
 
 import org.apache.commons.lang3.StringUtils;
-import org.htmlunit.junit.BrowserRunner;
-import org.htmlunit.junit.BrowserRunner.Alerts;
-import org.htmlunit.junit.BrowserRunner.HtmlUnitNYI;
-import org.htmlunit.junit.BrowserRunner.NotYetImplemented;
-import org.htmlunit.junit.BrowserRunner.OS;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.htmlunit.junit.annotation.Alerts;
+import org.htmlunit.junit.annotation.HtmlUnitNYI;
+import org.htmlunit.util.PrimitiveWebServer;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.OS;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.support.ui.ExpectedCondition;
@@ -42,7 +41,6 @@ import org.openqa.selenium.support.ui.WebDriverWait;
  * @author Ahmed Ashour
  * @author Ronald Brill
  */
-@RunWith(BrowserRunner.class)
 public class HttpWebConnection3Test extends WebDriverTestCase {
 
     /**
@@ -61,7 +59,7 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
             FF_ESR = {HttpHeader.HOST, HttpHeader.USER_AGENT, HttpHeader.ACCEPT, HttpHeader.ACCEPT_LANGUAGE,
                       HttpHeader.ACCEPT_ENCODING, HttpHeader.CONNECTION, HttpHeader.UPGRADE_INSECURE_REQUESTS,
                       HttpHeader.SEC_FETCH_DEST, HttpHeader.SEC_FETCH_MODE, HttpHeader.SEC_FETCH_SITE,
-                      HttpHeader.SEC_FETCH_USER})
+                      HttpHeader.SEC_FETCH_USER, HttpHeader.PRIORITY})
     public void headers() throws Exception {
         final String response = "HTTP/1.1 200 OK\r\n"
             + "Content-Length: 2\r\n"
@@ -102,9 +100,9 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                   HttpHeader.UPGRADE_INSECURE_REQUESTS, HttpHeader.SEC_FETCH_DEST, HttpHeader.SEC_FETCH_MODE,
                   HttpHeader.SEC_FETCH_SITE, HttpHeader.SEC_FETCH_USER, HttpHeader.PRIORITY},
             FF_ESR = {HttpHeader.HOST, HttpHeader.USER_AGENT, HttpHeader.ACCEPT, HttpHeader.ACCEPT_LANGUAGE,
-                      HttpHeader.ACCEPT_ENCODING, HttpHeader.REFERER, HttpHeader.CONNECTION, HttpHeader.COOKIE,
+                      HttpHeader.ACCEPT_ENCODING, HttpHeader.CONNECTION, HttpHeader.REFERER, HttpHeader.COOKIE,
                       HttpHeader.UPGRADE_INSECURE_REQUESTS, HttpHeader.SEC_FETCH_DEST, HttpHeader.SEC_FETCH_MODE,
-                      HttpHeader.SEC_FETCH_SITE, HttpHeader.SEC_FETCH_USER})
+                      HttpHeader.SEC_FETCH_SITE, HttpHeader.SEC_FETCH_USER, HttpHeader.PRIORITY})
     public void headers_cookie_referer() throws Exception {
         final String htmlResponse = "<a href='2.html'>Click me</a>";
         final String response = "HTTP/1.1 200 OK\r\n"
@@ -145,11 +143,11 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
      * @throws Exception if the test fails
      */
     @Test
-    @Alerts(DEFAULT = "gzip, deflate, br, zstd",
-            FF_ESR = "gzip, deflate, br")
+    @Alerts("gzip, deflate, br, zstd")
     @HtmlUnitNYI(CHROME = "gzip, deflate, br",
             EDGE = "gzip, deflate, br",
-            FF = "gzip, deflate, br")
+            FF = "gzip, deflate, br",
+            FF_ESR = "gzip, deflate, br")
     public void acceptEncoding() throws Exception {
         final String response = "HTTP/1.1 200 OK\r\n"
             + "Content-Length: 2\r\n"
@@ -164,15 +162,14 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
             driver.get("http://localhost:" + primitiveWebServer.getPort());
             final String request = primitiveWebServer.getRequests().get(0);
             final String[] headers = request.split("\\r\\n");
-            for (int i = 0; i < headers.length; i++) {
-                final String header = headers[i];
+            for (final String header : headers) {
                 if (StringUtils.startsWithIgnoreCase(header, HttpHeader.ACCEPT_ENCODING_LC)) {
                     final String value = header.substring(header.indexOf(':') + 1);
                     assertEquals(getExpectedAlerts()[0], value.trim());
                     return;
                 }
             }
-            fail("No accept-encoding header found.");
+            Assertions.fail("No accept-encoding header found.");
         }
     }
 
@@ -183,12 +180,9 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
      * @return true when the url matches, false otherwise
      */
     public static ExpectedCondition<Boolean> currentUrlContains(final String url) {
-        return new ExpectedCondition<Boolean>() {
-            @Override
-            public Boolean apply(final WebDriver driver) {
-                final String currentUrl = driver.getCurrentUrl();
-                return currentUrl != null && currentUrl.contains(url);
-            }
+        return driver -> {
+            final String currentUrl = driver.getCurrentUrl();
+            return currentUrl != null && currentUrl.contains(url);
         };
     }
 
@@ -243,7 +237,7 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                 + "Location: "
                     +  url
                     + "test?"
-                    + URLEncoder.encode("\u0623\u0647\u0644\u0627\u064b", "UTF-8")
+                    + URLEncoder.encode("\u0623\u0647\u0644\u0627\u064b", StandardCharsets.UTF_8)
                     + "\r\n"
                 + "\r\n";
 
@@ -260,7 +254,7 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
             final WebDriver driver = getWebDriver();
 
             driver.get(url);
-            Thread.sleep(DEFAULT_WAIT_TIME);
+            Thread.sleep(DEFAULT_WAIT_TIME.toMillis());
             assertEquals(getExpectedAlerts()[0], driver.getCurrentUrl());
             assertEquals(2, primitiveWebServer.getRequests().size());
             assertTrue(driver.getPageSource(), driver.getPageSource().contains("Hi"));
@@ -281,7 +275,7 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                 + "Content-Length: 0\r\n"
                 + "Location: "
                     +  url
-                    + URLEncoder.encode("\u0623\u0647\u0644\u0627\u064b", "UTF-8")
+                    + URLEncoder.encode("\u0623\u0647\u0644\u0627\u064b", StandardCharsets.UTF_8)
                     + "\r\n"
                 + "\r\n";
 
@@ -311,7 +305,11 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
      * @throws Exception if the test fails
      */
     @Test
-    @NotYetImplemented
+    @Alerts("para=%u65E5")
+    @HtmlUnitNYI(CHROME = "para=%25u65E5",
+            EDGE = "para=%25u65E5",
+            FF = "para=%25u65E5",
+            FF_ESR = "para=%25u65E5")
     public void queryString() throws Exception {
         final String response = "HTTP/1.1 302 Found\r\n"
                 + "Content-Length: 0\r\n"
@@ -323,7 +321,7 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
 
             driver.get("http://localhost:" + primitiveWebServer.getPort() + "?para=%u65E5");
             assertTrue(primitiveWebServer.getRequests().get(0),
-                        primitiveWebServer.getRequests().get(0).contains("para=%u65E5"));
+                        primitiveWebServer.getRequests().get(0).contains(getExpectedAlerts()[0]));
         }
     }
 
@@ -383,14 +381,15 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
-                      "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
+                      "Accept-Encoding: gzip, deflate, br, zstd",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
                       "Sec-Fetch-Site: same-origin",
-                      "Sec-Fetch-User: ?1"})
+                      "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i"})
     @HtmlUnitNYI(CHROME = {"GET /foo?text1=me+%26amp%3B+you&text2=Hello%0D%0Aworld%21 HTTP/1.1",
                            "Host: localhost:§§PORT§§",
                            "Connection: keep-alive",
@@ -436,9 +435,24 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                   "Sec-Fetch-Mode: navigate",
                   "Sec-Fetch-Site: same-origin",
                   "Sec-Fetch-User: ?1",
-                  "Priority: u=0, i"})
+                  "Priority: u=0, i"},
+            FF_ESR = {"GET /foo?text1=me+%26amp%3B+you&text2=Hello%0D%0Aworld%21 HTTP/1.1",
+                      "Host: localhost:§§PORT§§",
+                      "User-Agent: §§USER_AGENT§§",
+                      "Accept: §§ACCEPT§§",
+                      "Accept-Language: en-US,en;q=0.5",
+                      "Accept-Encoding: gzip, deflate, br",
+                      "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
+                      "Upgrade-Insecure-Requests: 1",
+                      "Sec-Fetch-Dest: document",
+                      "Sec-Fetch-Mode: navigate",
+                      "Sec-Fetch-Site: same-origin",
+                      "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i"})
     public void formGet() throws Exception {
-        String html = "<html><body><form action='foo' method='get' accept-charset='iso-8859-1'>\n"
+        String html = DOCTYPE_HTML
+            + "<html><body><form action='foo' method='get' accept-charset='iso-8859-1'>\n"
             + "<input name='text1' value='me &amp;amp; you'>\n"
             + "<textarea name='text2'>Hello\nworld!</textarea>\n"
             + "<input type='submit' id='submit'>\n"
@@ -490,9 +504,9 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "sec-ch-ua: §§SEC_USER_AGENT§§",
                       "sec-ch-ua-mobile: ?0",
                       "sec-ch-ua-platform: \"Windows\"",
-                      "Upgrade-Insecure-Requests: 1",
                       "Origin: http://localhost:§§PORT§§",
                       "Content-Type: application/x-www-form-urlencoded",
+                      "Upgrade-Insecure-Requests: 1",
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Sec-Fetch-Site: same-origin",
@@ -512,9 +526,9 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                     "sec-ch-ua: §§SEC_USER_AGENT§§",
                     "sec-ch-ua-mobile: ?0",
                     "sec-ch-ua-platform: \"Windows\"",
-                    "Upgrade-Insecure-Requests: 1",
                     "Origin: http://localhost:§§PORT§§",
                     "Content-Type: application/x-www-form-urlencoded",
+                    "Upgrade-Insecure-Requests: 1",
                     "User-Agent: §§USER_AGENT§§",
                     "Accept: §§ACCEPT§§",
                     "Sec-Fetch-Site: same-origin",
@@ -550,17 +564,18 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
-                      "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
+                      "Accept-Encoding: gzip, deflate, br, zstd",
                       "Content-Type: application/x-www-form-urlencoded",
                       "Content-Length: 48",
                       "Origin: http://localhost:§§PORT§§",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
                       "Sec-Fetch-Site: same-origin",
                       "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i",
                       "",
                       "text1=me+%26amp%3B+you&text2=Hello%0D%0Aworld%21"})
     @HtmlUnitNYI(CHROME = {"POST /foo HTTP/1.1",
@@ -632,20 +647,22 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
                       "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
                       "Sec-Fetch-Site: same-origin",
                       "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i",
                       "Origin: http://localhost:§§PORT§§",
                       "Content-Length: 48",
                       "Content-Type: application/x-www-form-urlencoded",
                       "",
                       "text1=me+%26amp%3B+you&text2=Hello%0D%0Aworld%21"})
     public void formPost() throws Exception {
-        String html = "<html><body><form action='foo' method='post' accept-charset='iso-8859-1'>\n"
+        String html = DOCTYPE_HTML
+            + "<html><body><form action='foo' method='post' accept-charset='iso-8859-1'>\n"
             + "<input name='text1' value='me &amp;amp; you'>\n"
             + "<textarea name='text2'>Hello\nworld!</textarea>\n"
             + "<input type='submit' id='submit'>\n"
@@ -741,14 +758,15 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
-                      "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
+                      "Accept-Encoding: gzip, deflate, br, zstd",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
                       "Sec-Fetch-Site: same-origin",
-                      "Sec-Fetch-User: ?1"})
+                      "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i"})
     @HtmlUnitNYI(CHROME = {"GET /2.html HTTP/1.1",
                            "Host: localhost:§§PORT§§",
                            "Connection: keep-alive",
@@ -794,9 +812,24 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                   "Sec-Fetch-Mode: navigate",
                   "Sec-Fetch-Site: same-origin",
                   "Sec-Fetch-User: ?1",
-                  "Priority: u=0, i"})
+                  "Priority: u=0, i"},
+            FF_ESR = {"GET /2.html HTTP/1.1",
+                      "Host: localhost:§§PORT§§",
+                      "User-Agent: §§USER_AGENT§§",
+                      "Accept: §§ACCEPT§§",
+                      "Accept-Language: en-US,en;q=0.5",
+                      "Accept-Encoding: gzip, deflate, br",
+                      "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
+                      "Upgrade-Insecure-Requests: 1",
+                      "Sec-Fetch-Dest: document",
+                      "Sec-Fetch-Mode: navigate",
+                      "Sec-Fetch-Site: same-origin",
+                      "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i"})
     public void anchor() throws Exception {
-        String html = "<html><body><a id='my' href='2.html'>Click me</a></body></html>";
+        String html = DOCTYPE_HTML
+                + "<html><body><a id='my' href='2.html'>Click me</a></body></html>";
         html = "HTTP/1.1 200 OK\r\n"
                 + "Content-Length: " + (html.length()) + "\r\n"
                 + "Content-Type: text/html\r\n"
@@ -884,13 +917,14 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
-                      "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
+                      "Accept-Encoding: gzip, deflate, br, zstd",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
-                      "Sec-Fetch-Site: same-origin"})
+                      "Sec-Fetch-Site: same-origin",
+                      "Priority: u=0, i"})
     @HtmlUnitNYI(CHROME = {"GET /foo HTTP/1.1",
                            "Host: localhost:§§PORT§§",
                            "Connection: keep-alive",
@@ -943,16 +977,18 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
                       "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
                       "Sec-Fetch-Site: same-origin",
-                      "Sec-Fetch-User: ?1"})
+                      "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i"})
     public void locationSetHref() throws Exception {
         final String url = "http://localhost:" + WebTestCase.PORT_PRIMITIVE_SERVER;
-        String html = "<html><body><script>location.href='" + url + "/foo';</script></body></html>";
+        String html = DOCTYPE_HTML
+                + "<html><body><script>location.href='" + url + "/foo';</script></body></html>";
         html = "HTTP/1.1 200 OK\r\n"
                 + "Content-Length: " + (html.length()) + "\r\n"
                 + "Content-Type: text/html\r\n"
@@ -1039,13 +1075,14 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
-                      "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
+                      "Accept-Encoding: gzip, deflate, br, zstd",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
-                      "Sec-Fetch-Site: same-origin"})
+                      "Sec-Fetch-Site: same-origin",
+                      "Priority: u=0, i"})
     @HtmlUnitNYI(CHROME = {"GET /?newSearch HTTP/1.1",
                            "Host: localhost:§§PORT§§",
                            "Connection: keep-alive",
@@ -1098,15 +1135,17 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
                       "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1",
                       "Sec-Fetch-Dest: document",
                       "Sec-Fetch-Mode: navigate",
                       "Sec-Fetch-Site: same-origin",
-                      "Sec-Fetch-User: ?1"})
+                      "Sec-Fetch-User: ?1",
+                      "Priority: u=0, i"})
     public void locationSetSearch() throws Exception {
-        String html = "<html><body><script>location.search='newSearch';</script></body></html>";
+        String html = DOCTYPE_HTML
+                + "<html><body><script>location.search='newSearch';</script></body></html>";
         html = "HTTP/1.1 200 OK\r\n"
                 + "Content-Length: " + (html.length()) + "\r\n"
                 + "Content-Type: text/html\r\n"
@@ -1147,10 +1186,10 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
     @Alerts(CHROME = {"GET /script.js HTTP/1.1",
                       "Host: localhost:§§PORT§§",
                       "Connection: keep-alive",
+                      "sec-ch-ua-platform: \"Windows\"",
+                      "User-Agent: §§USER_AGENT§§",
                       "sec-ch-ua: §§SEC_USER_AGENT§§",
                       "sec-ch-ua-mobile: ?0",
-                      "User-Agent: §§USER_AGENT§§",
-                      "sec-ch-ua-platform: \"Windows\"",
                       "Accept: §§ACCEPT§§",
                       "Sec-Fetch-Site: same-origin",
                       "Sec-Fetch-Mode: no-cors",
@@ -1161,10 +1200,10 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
             EDGE = {"GET /script.js HTTP/1.1",
                     "Host: localhost:§§PORT§§",
                     "Connection: keep-alive",
+                    "sec-ch-ua-platform: \"Windows\"",
+                    "User-Agent: §§USER_AGENT§§",
                     "sec-ch-ua: §§SEC_USER_AGENT§§",
                     "sec-ch-ua-mobile: ?0",
-                    "User-Agent: §§USER_AGENT§§",
-                    "sec-ch-ua-platform: \"Windows\"",
                     "Accept: §§ACCEPT§§",
                     "Sec-Fetch-Site: same-origin",
                     "Sec-Fetch-Mode: no-cors",
@@ -1189,12 +1228,13 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
-                      "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
+                      "Accept-Encoding: gzip, deflate, br, zstd",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Sec-Fetch-Dest: script",
                       "Sec-Fetch-Mode: no-cors",
-                      "Sec-Fetch-Site: same-origin"})
+                      "Sec-Fetch-Site: same-origin",
+                      "Priority: u=2"})
     @HtmlUnitNYI(CHROME = {"GET /script.js HTTP/1.1",
                            "Host: localhost:§§PORT§§",
                            "Connection: keep-alive",
@@ -1247,15 +1287,17 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
                       "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1", // wrong
                       "Sec-Fetch-Dest: script",
                       "Sec-Fetch-Mode: no-cors",
                       "Sec-Fetch-Site: same-origin",
-                      "Sec-Fetch-User: ?1" /* wrong */ })
+                      "Sec-Fetch-User: ?1", /* wrong */
+                      "Priority: u=0, i"})
     public void loadJavascript() throws Exception {
-        String html = "<html><head> <script src=\"script.js\"></script> </head><body></body></html>";
+        String html = DOCTYPE_HTML
+                + "<html><head> <script src=\"script.js\"></script> </head><body></body></html>";
         html = "HTTP/1.1 200 OK\r\n"
                 + "Content-Length: " + (html.length()) + "\r\n"
                 + "Content-Type: text/html\r\n"
@@ -1296,10 +1338,10 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
     @Alerts(CHROME = {"GET /script.js?x=%CE%D2%CA%C7%CE%D2%B5%C4%20?%20Abc HTTP/1.1",
                       "Host: localhost:§§PORT§§",
                       "Connection: keep-alive",
+                      "sec-ch-ua-platform: \"Windows\"",
+                      "User-Agent: §§USER_AGENT§§",
                       "sec-ch-ua: §§SEC_USER_AGENT§§",
                       "sec-ch-ua-mobile: ?0",
-                      "User-Agent: §§USER_AGENT§§",
-                      "sec-ch-ua-platform: \"Windows\"",
                       "Accept: §§ACCEPT§§",
                       "Sec-Fetch-Site: same-origin",
                       "Sec-Fetch-Mode: no-cors",
@@ -1310,10 +1352,10 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
             EDGE = {"GET /script.js?x=%CE%D2%CA%C7%CE%D2%B5%C4%20?%20Abc HTTP/1.1",
                     "Host: localhost:§§PORT§§",
                     "Connection: keep-alive",
+                    "sec-ch-ua-platform: \"Windows\"",
+                    "User-Agent: §§USER_AGENT§§",
                     "sec-ch-ua: §§SEC_USER_AGENT§§",
                     "sec-ch-ua-mobile: ?0",
-                    "User-Agent: §§USER_AGENT§§",
-                    "sec-ch-ua-platform: \"Windows\"",
                     "Accept: §§ACCEPT§§",
                     "Sec-Fetch-Site: same-origin",
                     "Sec-Fetch-Mode: no-cors",
@@ -1338,12 +1380,13 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "User-Agent: §§USER_AGENT§§",
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
-                      "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
+                      "Accept-Encoding: gzip, deflate, br, zstd",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Sec-Fetch-Dest: script",
                       "Sec-Fetch-Mode: no-cors",
-                      "Sec-Fetch-Site: same-origin"})
+                      "Sec-Fetch-Site: same-origin",
+                      "Priority: u=2"})
     @HtmlUnitNYI(CHROME = {"GET /script.js?x=%CE%D2%CA%C7%CE%D2%B5%C4%20?%20Abc HTTP/1.1",
                            "Host: localhost:§§PORT§§",
                            "Connection: keep-alive",
@@ -1396,19 +1439,21 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                       "Accept: §§ACCEPT§§",
                       "Accept-Language: en-US,en;q=0.5",
                       "Accept-Encoding: gzip, deflate, br",
-                      "Referer: http://localhost:§§PORT§§/",
                       "Connection: keep-alive",
+                      "Referer: http://localhost:§§PORT§§/",
                       "Upgrade-Insecure-Requests: 1", // wrong
                       "Sec-Fetch-Dest: script",
                       "Sec-Fetch-Mode: no-cors",
                       "Sec-Fetch-Site: same-origin",
-                      "Sec-Fetch-User: ?1" /* wrong */ })
-    // this fails on our CI but i have no idea why
+                      "Sec-Fetch-User: ?1", /* wrong */
+                      "Priority: u=0, i"})
+    // this fails on our CI but I have no idea why
     // seems like the request for downloading the script never reaches the
     // PrimitiveWebServer
-    @NotYetImplemented(value = {}, os = OS.Linux)
+    @DisabledOnOs(OS.LINUX)
     public void loadJavascriptCharset() throws Exception {
-        String html = "<html><head>"
+        String html = DOCTYPE_HTML
+                + "<html><head>"
                 + "<meta http-equiv='Content-Type' content='text/html; charset=GB2312'>"
                 + "<script src=\"script.js?x=\u6211\u662F\u6211\u7684 \u4eb8 Abc\"></script>"
                 + "</head><body></body></html>";
@@ -1420,8 +1465,7 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
         final String hi = "HTTP/1.1 200 OK\r\n"
                 + "Content-Length: 0\r\n"
                 + "Content-Type: text/javascript\r\n"
-                + "\r\n"
-                + "";
+                + "\r\n";
 
         shutDownAll();
         try (PrimitiveWebServer primitiveWebServer = new PrimitiveWebServer(Charset.forName("GB2312"), html, hi)) {
@@ -1439,6 +1483,18 @@ public class HttpWebConnection3Test extends WebDriverTestCase {
                 expectedHeaders[i] = expectedHeaders[i].replaceAll("§§ACCEPT§§",
                         getBrowserVersion().getScriptAcceptHeader());
             }
+
+            // let's try some wait on our CI server
+            final long endTime = System.currentTimeMillis() + Duration.ofSeconds(4).toMillis();
+            while (primitiveWebServer.getRequests().isEmpty()
+                        && System.currentTimeMillis() < endTime) {
+                Thread.sleep(100);
+            }
+
+            if (primitiveWebServer.getRequests().size() < 2) {
+                Assertions.fail("Still no request / request count:" + primitiveWebServer.getRequests().size());
+            }
+
             final String request = primitiveWebServer.getRequests().get(1);
             final String[] headers = request.split("\\r\\n");
             assertEquals(Arrays.asList(expectedHeaders).toString(), Arrays.asList(headers).toString());
