@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2024 Gargoyle Software Inc.
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,6 +14,7 @@
  */
 package org.htmlunit.archunit;
 
+import static com.tngtech.archunit.lang.syntax.ArchRuleDefinition.methods;
 import static com.tngtech.archunit.lang.syntax.ArchRuleDefinition.noClasses;
 
 import java.util.HashSet;
@@ -21,30 +22,41 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.htmlunit.BrowserVersion;
-import org.junit.Assert;
-import org.junit.runner.RunWith;
+import org.htmlunit.junit.annotation.AnnotationUtils;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import com.tngtech.archunit.core.domain.JavaClasses;
+import com.tngtech.archunit.core.domain.JavaMethod;
 import com.tngtech.archunit.junit.AnalyzeClasses;
 import com.tngtech.archunit.junit.ArchTest;
-import com.tngtech.archunit.junit.ArchUnitRunner;
+import com.tngtech.archunit.lang.ArchCondition;
 import com.tngtech.archunit.lang.ArchRule;
+import com.tngtech.archunit.lang.ConditionEvents;
+import com.tngtech.archunit.lang.SimpleConditionEvent;
 
 /**
  * Architecture tests for our test cases.
  *
  * @author Ronald Brill
  */
-@RunWith(ArchUnitRunner.class)
 @AnalyzeClasses(packages = "org.htmlunit")
 public class Architecture2Test {
 
+    /**
+     * All property test should test the same objects.
+     * @param classes all classes
+     */
     @ArchTest
     public static void allPropertyTestShouldTestTheSameObjects(final JavaClasses classes) {
         compare(classes, "ElementPropertiesTest", "ElementOwnPropertiesTest");
         compare(classes, "ElementPropertiesTest", "ElementOwnPropertySymbolsTest");
     }
 
+    /**
+     * All element test should test the same objects.
+     * @param classes all classes
+     */
     @ArchTest
     public static void allElementTestShouldTestTheSameObjects(final JavaClasses classes) {
         compare(classes, "ElementChildNodesTest", "ElementClosesItselfTest");
@@ -53,9 +65,14 @@ public class Architecture2Test {
         compare(classes, "ElementChildNodesTest", "ElementOuterHtmlTest");
     }
 
+    /**
+     * All host test should test the same objects.
+     * @param classes all classes
+     */
     @ArchTest
     public static void allHostTestShouldTestTheSameObjects(final JavaClasses classes) {
         compare(classes, "HostClassNameTest", "HostTypeOfTest");
+        compare(classes, "HostClassNameTest", "DedicatedWorkerGlobalScopeClassNameTest");
         compare(classes, "HostClassNameTest", "DedicatedWorkerGlobalScopeTypeOfTest");
     }
 
@@ -77,23 +94,23 @@ public class Architecture2Test {
         oneTests.removeAll(anotherTests);
 
         if (tmp.size() + oneTests.size() > 0) {
-            if (tmp.size() == 0) {
-                Assert.fail("The " + oneTests.size() + " method(s) "
-                    + oneTests.stream().sorted().collect(Collectors.toList())
+            if (tmp.isEmpty()) {
+                Assertions.fail("The " + oneTests.size() + " method(s) "
+                    + oneTests.stream().sorted().toList()
                     + " are available in " + oneName + " but missing in " + anotherName + ".");
             }
-            else if (oneTests.size() == 0) {
+            else if (oneTests.isEmpty()) {
                 anotherTests.removeAll(oneTests);
-                Assert.fail("The " + tmp.size() + " method(s) "
-                    + tmp.stream().sorted().collect(Collectors.toList())
+                Assertions.fail("The " + tmp.size() + " method(s) "
+                    + tmp.stream().sorted().toList()
                     + " are available in " + anotherName + " but missing in " + oneName + ".");
             }
 
-            Assert.fail("The " + tmp.size() + " method(s) "
-                    + tmp.stream().sorted().collect(Collectors.toList())
+            Assertions.fail("The " + tmp.size() + " method(s) "
+                    + tmp.stream().sorted().toList()
                     + " are available in " + anotherName + " but missing in " + oneName
                     + " and the " + oneTests.size() + " method(s) "
-                    + oneTests.stream().sorted().collect(Collectors.toList())
+                    + oneTests.stream().sorted().toList()
                     + " are available in " + oneName + " but missing in " + anotherName + ".");
         }
     }
@@ -114,7 +131,7 @@ public class Architecture2Test {
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.intl.DateTimeFormat")
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.intl.NumberFormat")
 
-        .should().callMethod(BrowserVersion.class, "isChrome", new Class[] {});
+        .should().callMethod(BrowserVersion.class, "isChrome");
 
     /**
      * Do not use BrowserVersion.isEdge().
@@ -133,7 +150,7 @@ public class Architecture2Test {
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.intl.DateTimeFormat")
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.intl.NumberFormat")
 
-        .should().callMethod(BrowserVersion.class, "isEdge", new Class[] {});
+        .should().callMethod(BrowserVersion.class, "isEdge");
 
     /**
      * Do not use BrowserVersion.isFirefox().
@@ -143,6 +160,8 @@ public class Architecture2Test {
         .that()
             .doNotHaveFullyQualifiedName("org.htmlunit.BrowserVersion")
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.configuration.AbstractJavaScriptConfiguration")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.worker.DedicatedWorkerGlobalScope")
+
             .and().doNotHaveFullyQualifiedName("org.htmlunit.css.BrowserConfiguration$FF")
             .and().doNotHaveFullyQualifiedName("org.htmlunit.css.BrowserConfiguration$FFNotIterable")
             .and().doNotHaveFullyQualifiedName("org.htmlunit.css.BrowserConfiguration$FFESR")
@@ -150,7 +169,8 @@ public class Architecture2Test {
             .and().doNotHaveFullyQualifiedName("org.htmlunit.css.BrowserConfiguration$ChromeAndEdgeAndFirefox")
 
             .and().doNotHaveFullyQualifiedName("org.htmlunit.general.huge.ElementClosesElementTest")
-        .should().callMethod(BrowserVersion.class, "isFirefox", new Class[] {});
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.general.huge.ElementClosesElement2Test")
+        .should().callMethod(BrowserVersion.class, "isFirefox");
 
     /**
      * Do not use BrowserVersion.isFirefoxESR().
@@ -160,7 +180,86 @@ public class Architecture2Test {
         .that()
             .doNotHaveFullyQualifiedName("org.htmlunit.BrowserVersion")
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.configuration.AbstractJavaScriptConfiguration")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.worker.DedicatedWorkerGlobalScope")
+
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.intl.DateTimeFormat")
             .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.intl.NumberFormat")
-        .should().callMethod(BrowserVersion.class, "isFirefoxESR", new Class[] {});
+        .should().callMethod(BrowserVersion.class, "isFirefoxESR");
+
+    /**
+     * Do not use hamcrest.
+     */
+    @ArchTest
+    public static final ArchRule hamcrest = noClasses()
+        .should().dependOnClassesThat().resideInAPackage("org.hamcrest..");
+
+    private static final ArchCondition<JavaMethod> haveConsistentTestAnnotations =
+            new ArchCondition<>("have consistent HtmlUnit test annotations") {
+                @Override
+                public void check(final JavaMethod method, final ConditionEvents events) {
+                    try {
+                        AnnotationUtils.assertAlerts(method.reflect());
+                    }
+                    catch (final AssertionError e) {
+                        events.add(SimpleConditionEvent.violated(method, e.getMessage()));
+                    }
+                }
+            };
+
+    /**
+     * Validate test annotations.
+     */
+    @ArchTest
+    public static final ArchRule consistentTestAnnotations = methods()
+            .that().areAnnotatedWith(Test.class)
+            .and().areNotDeclaredIn("org.htmlunit.junit.annotation.AnnotationUtilsTest")
+            .should(haveConsistentTestAnnotations);
+
+    /**
+     * Do not use archunit outside of this.
+     */
+    @ArchTest
+    public static final ArchRule archunitPackageRule = noClasses()
+            .that()
+                .resideOutsideOfPackage("org.htmlunit.archunit..")
+
+            .should().dependOnClassesThat().resideInAnyPackage("com.tngtech.archunit..");
+
+    /**
+     * Do not use google commons.
+     */
+    @ArchTest
+    public static final ArchRule googleCommonPackageRule = noClasses()
+            .should().dependOnClassesThat().resideInAnyPackage("com.google.common..");
+
+    /**
+     * Do not use jetty.
+     */
+    @ArchTest
+    public static final ArchRule jettyPackageRule = noClasses()
+        .that()
+            .resideOutsideOfPackage("org.htmlunit.archunit..")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.util.JettyServerUtils")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.util.JettyServerUtils$ConsoleErrorHandler")
+
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.WebServerTestCase")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.WebDriverTestCase")
+
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.HttpWebConnectionProxyTest")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.WebSocketTest$ChatWebSocketListener")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.WebSocketTest$CookiesWebSocketListener")
+            .and().doNotHaveFullyQualifiedName("org.htmlunit.javascript.host.WebSocketTest$EventsWebSocketListener")
+        .should()
+            .dependOnClassesThat().resideInAnyPackage("org.eclipse.jetty..");
+
+    /**
+     * Do not use java.util.logging.
+     */
+    @ArchTest
+    public static final ArchRule javaLogginPackageRule = noClasses()
+        .that()
+            .resideOutsideOfPackage("org.htmlunit.archunit..")
+            .and().resideOutsideOfPackage("org.htmlunit.jetty..")
+       .should()
+            .dependOnClassesThat().resideInAnyPackage("java.util.logging..");
 }
