@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2024 Gargoyle Software Inc.
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,14 +28,12 @@ import org.htmlunit.HttpHeader;
 import org.htmlunit.HttpMethod;
 import org.htmlunit.MockWebConnection;
 import org.htmlunit.WebDriverTestCase;
-import org.htmlunit.junit.BrowserRunner;
-import org.htmlunit.junit.BrowserRunner.Alerts;
-import org.htmlunit.junit.BrowserRunner.BuggyWebDriver;
-import org.htmlunit.junit.BrowserRunner.HtmlUnitNYI;
+import org.htmlunit.junit.annotation.Alerts;
+import org.htmlunit.junit.annotation.BuggyWebDriver;
+import org.htmlunit.junit.annotation.HtmlUnitNYI;
 import org.htmlunit.util.MimeType;
 import org.htmlunit.util.NameValuePair;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.Keys;
 import org.openqa.selenium.WebDriver;
@@ -49,7 +47,6 @@ import org.openqa.selenium.interactions.Actions;
  * @author Ronald Brill
  * @author Frank Danek
  */
-@RunWith(BrowserRunner.class)
 public class HtmlAnchorTest extends WebDriverTestCase {
 
     /**
@@ -58,8 +55,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"hi", "%28%29"})
     public void href_js_escaping() throws Exception {
-        final String html =
-              "<html><head>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head>\n"
             + "<script>\n"
             + LOG_TITLE_FUNCTION
             + "  function sayHello(text) {\n"
@@ -86,8 +83,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"(*%a", "%28%A"})
     public void href_js_escaping2() throws Exception {
-        final String html =
-              "<html><head><script>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head><script>\n"
             + "  function sayHello(text) {\n"
             + "    alert(text);\n"
             + "  }\n"
@@ -109,8 +106,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void clickNestedElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <span id='theSpan'>My Link</span>\n"
@@ -131,8 +128,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("§§URL§§page2.html")
     public void clickNestedButtonElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <button id='theButton'></button>\n"
@@ -152,11 +149,10 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      * @throws Exception if an error occurs
      */
     @Test
-    @Alerts(DEFAULT = "",
-            FF_ESR = "page2.html")
+    @Alerts("")
     public void clickNestedCheckboxElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <input type='checkbox' id='theCheckbox' name='myCheckbox' value='Milk'>\n"
@@ -180,12 +176,11 @@ public class HtmlAnchorTest extends WebDriverTestCase {
         try (InputStream is = getClass().getClassLoader().
                 getResourceAsStream("testfiles/not_supported_type.jpg")) {
             final byte[] directBytes = IOUtils.toByteArray(is);
-            final List<NameValuePair> emptyList = Collections.emptyList();
-            getMockWebConnection().setResponse(urlImage, directBytes, 200, "ok", "image/jpg", emptyList);
+            getMockWebConnection().setResponse(urlImage, directBytes, 200, "ok", "image/jpg", Collections.emptyList());
         }
 
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <img id='theImage' src='" + urlImage + "' />\n"
@@ -206,8 +201,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("page2.html")
     public void clickNestedInputImageElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <input type='image' id='theInput' />\n"
@@ -228,8 +223,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("page2.html")
     public void clickNestedInputTextElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <input type='text' id='theInput' />\n"
@@ -250,8 +245,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("page2.html")
     public void clickNestedInputPasswordElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <input type='password' id='theInput' />\n"
@@ -274,8 +269,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @BuggyWebDriver(FF = "§§URL§§",
                     FF_ESR = "§§URL§§")
     public void clickNestedOptionElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <select size=2>\n"
@@ -298,11 +293,10 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      * @throws Exception if an error occurs
      */
     @Test
-    @Alerts(DEFAULT = "",
-            FF_ESR = "page2.html")
+    @Alerts("")
     public void clickNestedRadioElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <input type='radio' id='theRadio' name='myRadio' value='Milk'>\n"
@@ -323,8 +317,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("page2.html")
     public void clickNestedResetElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <input type='reset' id='theInput' />\n"
@@ -345,8 +339,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("page2.html")
     public void clickNestedSubmitElement() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<body>\n"
             + "  <a href='page2.html'>\n"
             + "    <input type='submit' id='theInput' />\n"
@@ -366,8 +360,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void clickBlankTargetHashOnly() throws Exception {
-        final String html =
-                "<html>\n"
+        final String html = DOCTYPE_HTML
+                + "<html>\n"
                 + "<head><title>foo</title></head>\n"
                 + "<body>\n"
                 + "<a id='a' target='_blank' href='#'>Foo</a>\n"
@@ -389,8 +383,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"My Link", "", "abcd"})
     public void getText() throws Exception {
-        final String html =
-              "<html><head><script>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head><script>\n"
             + LOG_TITLE_FUNCTION
             + "  function test() {\n"
             + "    log(document.getElementById('myAnchor').text);\n"
@@ -414,8 +408,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"My Link 0", "Hello 0", " 1", "Hello 0", "a 2", "Hello 0"})
     public void setText() throws Exception {
-        final String html =
-              "<html><head><script>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head><script>\n"
             + LOG_TITLE_FUNCTION
             + "  function test() {\n"
             + "    try {\n"
@@ -433,7 +427,7 @@ public class HtmlAnchorTest extends WebDriverTestCase {
             + "      log(anchor.text + ' ' + anchor.children.length);\n"
             + "      anchor.text = 'Hello';\n"
             + "      log(anchor.text + ' ' + anchor.children.length);\n"
-            + "    } catch (e) { log('exception' + e) }\n"
+            + "    } catch(e) { log('exception' + e) }\n"
             + "  }\n"
             + "</script></head>\n"
             + "<body onload=test()>\n"
@@ -453,7 +447,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("<a\\sid=\"a\"\\shref=\"#x\">foo</a>")
     public void innerHtmlHrefQuotedEvenInIE() throws Exception {
-        final String html = "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<head><script>\n"
             + LOG_TITLE_FUNCTION_NORMALIZE
             + "</script></head>\n"
@@ -468,16 +463,16 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void click() throws Exception {
-        final String html
-            = "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<head><title>foo</title></head>\n"
             + "<body>\n"
             + "<a href='http://www.foo1.com' id='a1'>link to foo1</a>\n"
             + "<a href='" + URL_SECOND + "' id='a2'>link to foo2</a>\n"
             + "</body></html>";
 
-        final String secondContent
-            = "<html><head><title>Second</title></head><body></body></html>";
+        final String secondContent = DOCTYPE_HTML
+            + "<html><head><title>Second</title></head><body></body></html>";
 
         final MockWebConnection webConnection = getMockWebConnection();
         webConnection.setDefaultResponse(secondContent);
@@ -500,8 +495,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void clickAnchorName() throws Exception {
-        final String html
-            = "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<head><title>foo</title></head>\n"
             + "<body>\n"
             + "  <a href='#clickedAnchor' id='a1'>link to foo1</a>\n"
@@ -522,8 +517,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"", "#anchor", "#!bang"})
     public void dontReloadHashBang() throws Exception {
-        final String html
-            = "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<head></head>\n"
             + "<body>\n"
             + "  <a href='" + URL_FIRST + "test' id='a1'>link1</a>\n"
@@ -563,8 +558,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"#!board/WebDev", "#!article/WebDev/35", "#!article/WebDev/35"})
     public void dontReloadHashBang2() throws Exception {
-        final String html
-            = "<html>\n"
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<head></head>\n"
             + "<body>\n"
             + "  <a href='" + URL_FIRST + "test/#!board/WebDev' id='a1'>link1</a>\n"
@@ -602,23 +597,25 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      * @throws Exception if an error occurs
      */
     @Test
-    @Alerts("click href click doubleClick href ")
-    @BuggyWebDriver(
-            FF = "click click doubleClick href href ",
-            FF_ESR = "click click doubleClick href href ")
-    @HtmlUnitNYI(CHROME = "click href click href doubleClick ",
-            EDGE = "click href click href doubleClick ",
-            FF = "click href click href doubleClick ",
-            FF_ESR = "click href click href doubleClick ")
+    @Alerts({"click", "href", "click", "doubleClick", "href"})
+    @HtmlUnitNYI(CHROME = {"click", "href", "click", "href", "doubleClick"},
+            EDGE = {"click", "href", "click", "href", "doubleClick"},
+            FF = {"click", "href", "click", "href", "doubleClick"},
+            FF_ESR = {"click", "href", "click", "href", "doubleClick"})
     public void doubleClick() throws Exception {
-        final String html =
-              "<html>\n"
+        final String html = DOCTYPE_HTML
+              + "<html>\n"
+              + "<head>\n"
+              + "<script>\n"
+              + LOG_TEXTAREA_FUNCTION
+              + "</script>\n"
+              + "</head>\n"
             + "<body>\n"
             + "  <a id='myAnchor' "
-            +       "href=\"javascript:document.getElementById('myTextarea').value+='href ';void(0);\" "
-            +       "onClick=\"document.getElementById('myTextarea').value+='click ';\" "
-            +       "onDblClick=\"document.getElementById('myTextarea').value+='doubleClick ';\">foo</a>\n"
-            + "  <textarea id='myTextarea'></textarea>\n"
+            +       "href=\"javascript:log('href');void(0);\" "
+            +       "onClick=\"log('click');\" "
+            +       "onDblClick=\"log('doubleClick');\">foo</a>\n"
+            + LOG_TEXTAREA
             + "</body></html>";
 
         final WebDriver driver = loadPage2(html);
@@ -627,7 +624,7 @@ public class HtmlAnchorTest extends WebDriverTestCase {
         action.doubleClick(driver.findElement(By.id("myAnchor")));
         action.perform();
 
-        assertEquals(getExpectedAlerts()[0], driver.findElement(By.id("myTextarea")).getAttribute("value"));
+        verifyTextArea2(driver, getExpectedAlerts());
     }
 
     /**
@@ -636,10 +633,10 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"§§URL§§bug.html?h%C3%B6=G%C3%BCnter", "h\u00F6", "G\u00FCnter"})
     public void encoding() throws Exception {
-        final String href = "bug.html?" + URLEncoder.encode("h\u00F6", "UTF-8")
-                + '=' + URLEncoder.encode("G\u00FCnter", "UTF-8");
-        final String html =
-            "<html>\n"
+        final String href = "bug.html?" + URLEncoder.encode("h\u00F6", UTF_8)
+                + '=' + URLEncoder.encode("G\u00FCnter", UTF_8);
+        final String html = DOCTYPE_HTML
+            + "<html>\n"
             + "<head>\n"
             + "  <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>\n"
             + "</head>\n"
@@ -667,8 +664,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void javascriptWithReturn() throws Exception {
-        final String html
-            = "<html><head><title>First</title></head><body>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head><title>First</title></head><body>\n"
             + "  <a id='myLink' href='javascript:return true'>hi</a>\n"
             + "</body></html>";
         final WebDriver webDriver = loadPage2(html);
@@ -680,8 +677,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void javascriptWithReturnWhitespace() throws Exception {
-        final String html
-            = "<html><head><title>First</title></head><body>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head><title>First</title></head><body>\n"
             + "  <a id='myLink' href='javascript: return true'>hi</a>\n"
             + "</body></html>";
         final WebDriver webDriver = loadPage2(html);
@@ -694,7 +691,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"1", "First"})
     public void shiftClick() throws Exception {
-        final String html = "<html><head><title>First</title></head><body>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head><title>First</title></head><body>\n"
             + "<a href='" + URL_SECOND + "'>Click Me</a>\n"
             + "</form></body></html>";
 
@@ -724,7 +722,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"1", "First"})
     public void ctrlClick() throws Exception {
-        final String html = "<html><head><title>First</title></head><body>\n"
+        final String html = DOCTYPE_HTML
+            + "<html><head><title>First</title></head><body>\n"
             + "<a href='" + URL_SECOND + "'>Click Me</a>\n"
             + "</form></body></html>";
 
@@ -742,7 +741,7 @@ public class HtmlAnchorTest extends WebDriverTestCase {
                 .keyUp(Keys.CONTROL)
                 .perform();
 
-        Thread.sleep(DEFAULT_WAIT_TIME);
+        Thread.sleep(DEFAULT_WAIT_TIME.toMillis());
         assertEquals("Should have opened a new window",
                 windowsSize + Integer.parseInt(getExpectedAlerts()[0]), driver.getWindowHandles().size());
         assertEquals("Should not have navigated away", getExpectedAlerts()[1], driver.getTitle());
@@ -755,23 +754,23 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("§§URL§§index.html?test")
     public void click_refererHeader() throws Exception {
-        final String firstContent
-            = "<html><head><title>Page A</title></head>\n"
+        final String firstContent = DOCTYPE_HTML
+            + "<html><head><title>Page A</title></head>\n"
             + "<body><a href='" + URL_SECOND + "' id='link'>link</a></body>\n"
             + "</html>";
-        final String secondContent
-            = "<html><head><title>Page B</title></head>\n"
+        final String secondContent = DOCTYPE_HTML
+            + "<html><head><title>Page B</title></head>\n"
             + "<body></body>\n"
             + "</html>";
 
         expandExpectedAlertsVariables(URL_FIRST);
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -786,21 +785,21 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void click_refererHeaderNoReferrer() throws Exception {
-        final String firstContent
-            = "<html><head><title>Page A</title></head>\n"
+        final String firstContent = DOCTYPE_HTML
+            + "<html><head><title>Page A</title></head>\n"
             + "<body><a href='" + URL_SECOND + "' id='link' rel='noreferrer'>link</a></body>\n"
             + "</html>";
-        final String secondContent
-            = "<html><head><title>Page B</title></head>\n"
+        final String secondContent = DOCTYPE_HTML
+            + "<html><head><title>Page B</title></head>\n"
             + "<body></body>\n"
             + "</html>";
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -815,21 +814,21 @@ public class HtmlAnchorTest extends WebDriverTestCase {
      */
     @Test
     public void click_refererHeaderNoReferrerCaseSensitive() throws Exception {
-        final String firstContent
-            = "<html><head><title>Page A</title></head>\n"
+        final String firstContent = DOCTYPE_HTML
+            + "<html><head><title>Page A</title></head>\n"
             + "<body><a href='" + URL_SECOND + "' id='link' rel='NoReferrer'>link</a></body>\n"
             + "</html>";
-        final String secondContent
-            = "<html><head><title>Page B</title></head>\n"
+        final String secondContent = DOCTYPE_HTML
+            + "<html><head><title>Page B</title></head>\n"
             + "<body></body>\n"
             + "</html>";
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -844,32 +843,32 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts("§§URL§§index.html?test")
     public void controlClick_refererHeader() throws Exception {
-        final String firstContent
-            = "<html><head><title>Page A</title></head>\n"
+        final String firstContent = DOCTYPE_HTML
+            + "<html><head><title>Page A</title></head>\n"
             + "<body>\n"
             + "  <a href='" + URL_SECOND + "' id='link'>link</a>\n"
             + "</body>\n"
             + "</html>";
-        final String secondContent
-            = "<html><head><title>Page B</title></head>\n"
+        final String secondContent = DOCTYPE_HTML
+            + "<html><head><title>Page B</title></head>\n"
             + "<body></body>\n"
             + "</html>";
 
         expandExpectedAlertsVariables(URL_FIRST);
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         new Actions(driver)
                 .keyDown(Keys.CONTROL)
                 .click(driver.findElement(By.id("link")))
                 .keyUp(Keys.CONTROL)
                 .build().perform();
 
-        Thread.sleep(DEFAULT_WAIT_TIME / 10);
+        Thread.sleep(DEFAULT_WAIT_TIME.toMillis() / 10);
 
         assertEquals(2, getMockWebConnection().getRequestCount());
 
